# BeRicher-Open

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: demo.json
configs/backtest/: default.json
configs/oof/: transformer_5fold.json
configs/paper/: create.json
configs/train/: transformer.json
docs/: architecture.md  data.md  modules.md  oof-showcase.md  paper-trading.md  strategy-backtest.md  training-oof.md
examples/data/: stko_11y_oos_profile.json  transformer_11y_oof_summary.json  transformer_11y_oof_synthetic.csv
scripts/: check_release.py  generate_oof_showcase.py  render_showcase.py
src/tensoralpha/: __init__.py  __main__.py  cli.py  demo.py  release_policy.py  settings.py  visualization.py
src/tensoralpha/backtest/: __init__.py  account.py  broker.py  engine.py
src/tensoralpha/data/: __init__.py  panel.py  tushare.py
src/tensoralpha/evaluation/: __init__.py  metrics.py  showcase.py
src/tensoralpha/features/: __init__.py  pipeline.py
src/tensoralpha/inference/: __init__.py  artifact.py
src/tensoralpha/models/: __init__.py  transformer.py
src/tensoralpha/paper/: __init__.py  trader.py
src/tensoralpha/strategy/: __init__.py  rotation.py
src/tensoralpha/training/: __init__.py  dataset.py  oof.py  split.py  trainer.py  workflow.py
tests/integration/: test_cli.py  test_oof_training.py
tests/unit/: test_backtest.py  test_brand.py  test_data.py  test_demo.py  test_evaluation.py  test_features.py  test_model.py  test_oof.py  test_oof_showcase.py  test_paper.py  test_release_policy.py  test_research_profile.py  test_settings.py  test_training.py  test_tushare.py  test_visualization.py
